# RhodawkAI

./: README.md  docker-compose.dev.yaml  pyproject.toml  render.yaml  standalone.Dockerfile
.github/workflows/: build_and_push_docker.yml  rhodawk-backend-AutoDeployTrigger-3e5a49cd-d51c-45b9-93a5-6170d843a4cc.yml
src/backend/search/: search_service.py
src/backend/search/providers/: bs4_parser.py  crawl4ai.py  firecrawl.py  playwright_adapter.py  scrapy_adapter.py
src/frontend/src/app/: layout.tsx
src/frontend/src/components/: chat-panel.tsx  footer.tsx  local-toggle.tsx  starter-questions.tsx
