rm poetry.lock
poetry lock --no-update
poetry install
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
inquirer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
llama-index-llms-litellm = "^0.1.4"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
inquirer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
llama-index-llms-litellm = "^0.1.4"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
inquirer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
llama-index-llms-litellm = "^0.1.4"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
inquirer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
